Revert "getPortMapping Backend e TDD - Funcionais"
This reverts commit f694df910abc85ba5bae221ca38ad533fe137caa.